Gate attacks and skills by the client animation clock
Added server-side validation for auto attacks and skills based on measured client animation timing. Validates attack intervals, hit times, animation markers, skill timing, summon attacks, and animation selection, with retail-compatible timing and tolerances.

Also fixed several related edge cases and invalid motion/hit-time handling, and unified the health percentage used by packets and thresholds on the retail formula with inclusive comparisons, and rounded the mana percentage the same way.